--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                                                     <div class="owl-carousel owl-theme">
 
                                                         <div class="owl-slider item">
-                                                               <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/smoking.jpeg);">
+                                                               <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/kanye-west-weed-herbalist.jpeg);">
                                                                    <div class="slider-content et_pb_row">
                                                                        <h2 class="custom-slider-text herbalist-kit">Highly Curated 🍃</h2>
                                                                        <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
