--- a/shop/index.html
+++ b/shop/index.html
@@ -446,9 +446,9 @@ heateor_sss_vertical_sharing{
                                                         <div class="owl-slider item">
                                                             <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/kanye-west-weed-herbalist.jpeg);">
                                                                 <div class="slider-content et_pb_row">
-                                                                    <h2>Accesorios Premium</h2>
+                                                                    <h2>Highly <br> Curated 🍃</h2>
                                                                     <a class="more btn btn--black" target="" href="#shop-herbalist">
-                                                                        <span class="text">Shop</span>
+                                                                        <span class="text">Shop Now</span>
                                                                         <span class="bg"></span>
                                                                     </a>
                                                                 </div>
