--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                                                                 <div class="slider-content et_pb_row">
                                                                     <h2 class="custom-slider-text herbalist-kit">SMOKE SHOP</h2>
                                                                     <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
-                                                                        <span class="text">Shop Now</span>
+                                                                        <span class="text">Shop</span>
                                                                         <span class="bg"> </span>
                                                                     </a>
 
