--- a/shop/index.html
+++ b/shop/index.html
@@ -444,11 +444,11 @@ heateor_sss_vertical_sharing{
                                                     </div>-->
 
                                                         <div class="owl-slider item">
-                                                            <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/kanye-west-weed-herbalist.jpeg);">
+                                                            <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/the-herbalist-stoner-box.jpg);">
                                                                 <div class="slider-content et_pb_row">
-                                                                    <h2>Highly <br> Curated 🍃</h2>
+                                                                    <h2>Herbalist smoking essentials</h2>
                                                                     <a class="more btn btn--black" target="" href="#shop-herbalist">
-                                                                        <span class="text">Shop Now</span>
+                                                                        <span class="text">Shop</span>
                                                                         <span class="bg"></span>
                                                                     </a>
                                                                 </div>
