--- a/shop/index.html
+++ b/shop/index.html
@@ -42,6 +42,11 @@ heateor_sss_vertical_sharing{
     .heateor_sss_floating_follow_icons_container{display:none!important}}
 </style>
 
+
+
+
+
+
     <meta name="robots" content="index, follow">
 
     <script type="text/javascript">
@@ -108,6 +113,16 @@ heateor_sss_vertical_sharing{
     <link rel="preload" as="style" id="et-core-unified-tb-12-tb-31-deferred-2-cached-inline-styles" href="https://www.herbalist.ml/css/et-core-unified-tb-12-tb-31-deferred-2.min.css?v2" onload="this.onload=null;this.rel='stylesheet';" />
 
     <style type="text/css">/** Mega Menu CSS: fs **/</style>
+
+
+
+<style type="text/css">
+a.more.btn.btn--black {
+    color: #636d16;
+    border: 1px solid #636d16;
+}
+</style>
+
 
 </head>
 
