--- a/shop/index.html
+++ b/shop/index.html
@@ -1402,7 +1402,7 @@ heateor_sss_vertical_sharing{
                                 <div class="et_pb_module et_pb_text et_pb_text_0_tb_footer cus-animate  et_pb_text_align_center et_pb_bg_layout_light">
                                     <div class="et_pb_text_inner">
                                         <p>
-                                            HERBALIST SMOKE SHOP* HERBALIST SMOKE SHOP* HERBALIST SMOKE SHOP* HERBALIST SMOKE SHOP* HERBALIST SMOKE SHOP* HERBALIST SMOKE SHOP* HERBALIST SMOKE SHOP* HERBALIST SMOKE SHOP* HERBALIST SMOKE SHOP
+                                            SMOKE SHOP* SMOKE SHOP* SMOKE SHOP* SMOKE SHOP* SMOKE SHOP* SMOKE SHOP* SMOKE SHOP* SMOKE SHOP* SMOKE SHOP
                                         </p>
                                     </div>
                                 </div>
@@ -1419,7 +1419,7 @@ heateor_sss_vertical_sharing{
 
                                 <div class="et_pb_module et_pb_text et_pb_text_1_tb_footer  et_pb_text_align_left et_pb_bg_layout_light">
 
-                                    <div class="et_pb_text_inner"><h3>Herbalist es sinónimo de comunidad y cultura.</h3>
+                                    <div class="et_pb_text_inner"><h3>Herbalist Smoke Shop</h3>
 
                                         <p>
                                             <span>
