--- a/index.html
+++ b/index.html
@@ -424,17 +424,7 @@
                                                 <div class="et_pb_text_inner"><div class="feature_slider" id="feature_slider">
                                                     <div class="owl-carousel owl-theme">
 
-                                                       <!-- <div class="owl-slider item"> 
-                                                               <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/kanye-west-weed-herbalist.jpeg);">
-                                                                   <div class="slider-content et_pb_row">
-                                                                       <h2 class="custom-slider-text herbalist-kit">Highly Curated 🍃</h2>
-                                                                       <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
-                                                                           <span class="text">Shop Now</span>
-                                                                           <span class="bg">Smoking essentials</span>
-                                                                       </a>
-                                                                   </div>
-                                                               </div>
-                                                           </div>-->
+                                                       
 
                                                         <div class="owl-slider item">
                                                             <div class="feature-slider" style="background-image: url('https://www.herbalist.ml/img/photo-1569272307873-b28b4231edfa.jpeg');">
@@ -448,6 +438,20 @@
                                                                 </div>
                                                             </div>
                                                         </div>
+
+
+                                                        <div class="owl-slider item"> 
+                                                            <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/photo-1569272312655-56e340c5c0c6.jpeg);">
+                                                                <div class="slider-content et_pb_row">
+                                                                    <h2 class="custom-slider-text herbalist-kit">Best smoking essentials</h2>
+                                                                    <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
+                                                                        <span class="text">Order Now</span>
+                                                                        <span class="bg">Smoking essentials</span>
+                                                                    </a>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
 
                                                     </div>
                                                 </div>
